--- a/TestingApp/TestingApp.Windows/TextPage.xaml
+++ b/TestingApp/TestingApp.Windows/TextPage.xaml
@@ -1,6 +1,6 @@
 ﻿<Page
     x:Name="pageRoot"
-    x:Class="TestingApp.TestPage"
+    x:Class="TestingApp.TextPage"
     DataContext="{Binding DefaultViewModel, RelativeSource={RelativeSource Self}}"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -12,7 +12,7 @@
 
     <Page.Resources>
         <!-- TODO: Delete this line if the key AppName is declared in App.xaml -->
-        <x:String x:Key="AppName">Тест API</x:String>
+        <x:String x:Key="AppName">My Application</x:String>
     </Page.Resources>
 
     <!--
@@ -46,33 +46,25 @@
             <TextBlock x:Name="pageTitle" Text="{StaticResource AppName}" Style="{StaticResource HeaderTextBlockStyle}" Grid.Column="1" 
                         IsHitTestVisible="false" TextWrapping="NoWrap" VerticalAlignment="Bottom" Margin="0,0,30,40"/>
         </Grid>
-        <Grid Grid.Row="1">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="Auto" />
-                <RowDefinition Height="Auto" />
-                <RowDefinition Height="100*" />
-                <RowDefinition Height="Auto" />
-            </Grid.RowDefinitions>
-            <StackPanel Orientation="Horizontal" Grid.Row="0">
-                <Button Margin="5" x:Name="TestButton" Click="TestButton_OnClick">Тест</Button>
-                <Button Margin="5" x:Name="CancellationSourceTestButton" Click="CancellationSourceTestButton_OnClick">Тест отмены</Button>
-                <Button Margin="5" x:Name="NavigateToText" Click="NavigateToText_OnClick">Текст</Button>
-            </StackPanel>
-            <Grid Grid.Row="1">
+        <Border Grid.Row="1">
+            <Grid>
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="25" />
-                    <RowDefinition Height="25" />
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="100*"/>
                 </Grid.RowDefinitions>
-                <ProgressBar Grid.Row="0" x:Name="TestProgress" VerticalContentAlignment="Center" Margin="5" Visibility="Collapsed" Minimum="0" Maximum="100" />
-                <TextBlock Grid.Row="1" x:Name="TestMessage" Margin="5" VerticalAlignment="Center" Visibility="Collapsed" />
-            </Grid>
-            <ScrollViewer Margin="5" Grid.Row="2" HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Visible">
-                <ScrollViewer.Background>
-                    <SolidColorBrush Color="White" Opacity="0.25"></SolidColorBrush>
-                </ScrollViewer.Background>
-                <RichTextBlock TextWrapping="Wrap" FontFamily="Courier New" FontSize="16" x:Name="LogBlock" IsTextSelectionEnabled="True"></RichTextBlock>
-            </ScrollViewer>
-            <Button Margin="5" Grid.Row="3" x:Name="ClearLogButton" Click="ClearLogButton_OnClick">Очистить лог</Button>
-        </Grid>
+                <StackPanel Orientation="Horizontal" Grid.Row="0">
+                    <TextBox Width="500" Margin="3" x:Name="TextField" AcceptsReturn="True"></TextBox>
+                    <Button Click="ButtonBase_OnClick" Tag="text">Add text</Button>
+                    <Button Click="ButtonBase_OnClick" Tag="flush">Flush</Button>
+                    <Button Click="ButtonBase_OnClick" Tag="break">Add break</Button>
+                    <Button Click="ButtonBase_OnClick" Tag="clear">Clear</Button>
+                </StackPanel>
+                <ScrollViewer Grid.Row="1" Margin="5">
+                    <Border VerticalAlignment="Top" Background="White">
+                        <Canvas x:Name="TextCanvas"></Canvas>
+                    </Border>
+                </ScrollViewer>
+           </Grid>
+        </Border>
     </Grid>
 </Page>
