--- a/DvachBrowser3/Views/Shell.xaml
+++ b/DvachBrowser3/Views/Shell.xaml
@@ -32,6 +32,12 @@
                         <TextBlock Margin="12,0,0,0" VerticalAlignment="Center" Text="Главная" />
                     </StackPanel>
                 </controls:HamburgerButtonInfo>
+                <controls:HamburgerButtonInfo ClearHistory="True" PageType="local:BoardsPage">
+                    <StackPanel Orientation="Horizontal">
+                        <SymbolIcon Width="48" Height="48" Symbol="World" />
+                        <TextBlock Margin="12,0,0,0" VerticalAlignment="Center" Text="Доски" />
+                    </StackPanel>
+                </controls:HamburgerButtonInfo>
             </controls:HamburgerMenu.PrimaryButtons>
 
         </controls:HamburgerMenu>
