Рендеринг текста поста

--- a/DvachBrowser3/App.xaml
+++ b/DvachBrowser3/App.xaml
@@ -8,7 +8,8 @@
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="Styles\Custom.xaml" />
+                <ResourceDictionary Source="Styles/Custom.xaml" />
+                <ResourceDictionary Source="Styles/PostRender.xaml"/>
             </ResourceDictionary.MergedDictionaries>
             <local:BoolToVisibilityConverter x:Key="BoolToVisibilityConverter" />
         </ResourceDictionary>
