Модели представления постов + сервис страницы для времени жизни моделей представления

--- a/DvachBrowser3/Views/BoardsPage.xaml
+++ b/DvachBrowser3/Views/BoardsPage.xaml
@@ -20,6 +20,7 @@
     <ps:PageServices.Services>
         <ps:PageServiceCollection>
             <ps:ShellAppBarPageService />
+            <ps:ViewModelLifetimePageService />
         </ps:PageServiceCollection>
     </ps:PageServices.Services>
     
