--- a/DvachBrowser3/Views/Shell.xaml
+++ b/DvachBrowser3/Views/Shell.xaml
@@ -39,6 +39,14 @@
                     </StackPanel>
                 </controls:HamburgerButtonInfo>
             </controls:HamburgerMenu.PrimaryButtons>
+            <controls:HamburgerMenu.SecondaryButtons>
+                <controls:HamburgerButtonInfo ClearHistory="True" PageType="local:TestingPage">
+                    <StackPanel Orientation="Horizontal">
+                        <SymbolIcon Width="48" Height="48" Symbol="Flag" />
+                        <TextBlock Margin="12,0,0,0" VerticalAlignment="Center" Text="Тестирование" />
+                    </StackPanel>
+                </controls:HamburgerButtonInfo>
+            </controls:HamburgerMenu.SecondaryButtons>
 
         </controls:HamburgerMenu>
 
