--- a/DvachBrowser3/Views/TestingPage.xaml
+++ b/DvachBrowser3/Views/TestingPage.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="DvachBrowser3.Views.MainPage"
+﻿<Page x:Class="DvachBrowser3.Views.TestingPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:Core="using:Microsoft.Xaml.Interactions.Core"
@@ -7,6 +7,7 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       xmlns:behaviors="using:Template10.Behaviors"
+      xmlns:partial="using:DvachBrowser3.Views.Partial"
       mc:Ignorable="d">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
@@ -25,7 +26,10 @@
         </controls:PageHeader>
 
         <Grid Grid.Row="1" Padding="4,4,4,0">
-            <StackPanel></StackPanel>
+            <StackPanel>
+                <partial:BannerView x:Name="BannerView" HorizontalAlignment="Center" Margin="10" />
+                <Button x:Name="LoadBoardDataButton" HorizontalAlignment="Center" Click="LoadBoardDataButton_OnClick">Загрузить</Button>
+            </StackPanel>
         </Grid>
     </Grid>
 </Page>
