--- a/DvachBrowser3/Views/Partial/PostText.xaml
+++ b/DvachBrowser3/Views/Partial/PostText.xaml
@@ -9,7 +9,7 @@
     d:DesignHeight="300"
     d:DesignWidth="400">
 
-    <Grid Background="{ThemeResource PostBackgroundBrush}" Padding="4">
+    <Grid Padding="4">
         <Canvas x:Name="MainCanvas">
         </Canvas>
     </Grid>
