Отображение прогресса с поддержкой StatusBar

--- a/DvachBrowser3/Views/BoardInfoPage.xaml
+++ b/DvachBrowser3/Views/BoardInfoPage.xaml
@@ -19,6 +19,7 @@
     <ps:PageServices.Services>
         <ps:PageServiceCollection>
             <ps:ViewModelLifetimePageService />
+            <ps:NoStatusBarProgressPageService />
         </ps:PageServiceCollection>
     </ps:PageServices.Services>
     
