--- a/DvachBrowser3/Views/BoardsPage.xaml
+++ b/DvachBrowser3/Views/BoardsPage.xaml
@@ -67,7 +67,7 @@
                 <RowDefinition Height="Auto" />
                 <RowDefinition Height="100*" />
             </Grid.RowDefinitions>
-            <ProgressBar Grid.Row="0" Margin="4" IsIndeterminate="True" Visibility="{x:Bind ViewModel.Refresh.Progress.IsActive, Mode=OneWay, Converter={StaticResource BoolToVisibilityConverter}, ConverterParameter=false}" />
+            <pa:ProgressIndicatorControl Grid.Row="0" Margin="4" ShowMessage="True" ViewModel="{x:Bind ViewModel.Refresh.Progress, Mode=OneWay}" />
             <TextBox x:Name="SearchBox" Grid.Row="1" PlaceholderText="Поиск доски" Margin="8, 2, 8, 2" Text="{x:Bind ViewModel.Filter, Mode=OneWay}">
                 <Interactivity:Interaction.Behaviors>
                     <localBehaviors:TextBoxChangeDelayBehavior>
