Отображение списка на странице борды

--- a/DvachBrowser3/Views/Partial/BoardThreadRefList.xaml
+++ b/DvachBrowser3/Views/Partial/BoardThreadRefList.xaml
@@ -3,15 +3,27 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:DvachBrowser3.Views.Partial"
+    xmlns:local2="using:DvachBrowser3"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:vm="using:DvachBrowser3.ViewModels"
     mc:Ignorable="d"
     d:DesignHeight="300"
     d:DesignWidth="400">
+    
+    <UserControl.Resources>
+        <local2:BoolToVisibilityConverter x:Key="BoolToVisibilityConverter" />
+    </UserControl.Resources>
 
     <Grid>
         <ListView ItemsSource="{x:Bind ViewModel.Threads, Mode=OneWay}" SelectionMode="None" Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+            <ListView.Header>
+                <StackPanel>
+                    <local:BannerView ViewModel="{x:Bind ViewModel.Banner, Mode=OneWay}" x:Name="Banner" HorizontalAlignment="Center" Margin="5" 
+                                      Visibility="{x:Bind ShowBanner, Mode=OneWay, Converter={StaticResource BoolToVisibilityConverter}, ConverterParameter=false}"
+                                      ToolTipService.ToolTip="{x:Bind ViewModel.Banner.BannerLinkTitle, Mode=OneWay}"/>
+                </StackPanel>
+            </ListView.Header>
             <ListView.ItemContainerStyle>
                 <Style TargetType="ListViewItem">
                     <Setter Property="HorizontalContentAlignment" Value="Stretch" />
@@ -22,6 +34,16 @@
                     <local:BoardThreadRefPreview ViewModel="{x:Bind Mode=OneWay}" Margin="0, 5, 0, 5" />
                 </DataTemplate>
             </ListView.ItemTemplate>
+            <ListView.Footer>
+                <Border Margin="0, 15, 0, 0" BorderThickness="0, 1, 0, 0" BorderBrush="{ThemeResource SystemControlBackgroundChromeMediumBrush}">
+                    <StackPanel>
+                        <TextBlock Margin="5" FontSize="14.5">
+                            <Run>Скорость борды: </Run>
+                            <Run Text="{x:Bind ViewModel.BoardSpeed, Mode=OneWay}" FontWeight="SemiBold" />
+                        </TextBlock>
+                    </StackPanel>
+                </Border>
+            </ListView.Footer>
         </ListView>
     </Grid>
 </UserControl>
