--- a/DvachBrowser3/Views/Partial/PostText.xaml
+++ b/DvachBrowser3/Views/Partial/PostText.xaml
@@ -9,8 +9,6 @@
     d:DesignHeight="300"
     d:DesignWidth="400">
 
-    <Grid Padding="4">
-        <Canvas x:Name="MainCanvas">
-        </Canvas>
+    <Grid Padding="4" x:Name="MainGrid">
     </Grid>
 </UserControl>
